# datocaml

./: .ocamlformat  dune-project
lib/coll/: dune  xlist.ml  xoption.ml  xresult.ml
lib/datom_db/: attr.ml  datom.ml  datom_db.ml  db_config.ml  dune  eid.ml  io.ml  io.mli  search.ml  transact.ml  value.ml
lib/dynamodb/: api.ml  credential.ml  dune  dynamodb.ml  dynamodb.mli  endpoints.ml  sign.ml  type.ml
lib/list/: dune  xlist.ml
lib/monad/: dune  monad.ml  monad.mli  monad_intf.ml
